5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1635_2447.log
== TEST (2019-04-08 14:50:30) 
-- CODE:
preco = float("")
pagamento = float("")
x = pagamento - preco 
y = preco - pagamento

if (preco>pagamento):
	print("Falta x")
else:
	print("Troco de Y")

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    preco = float("")
ValueError: could not convert string to float:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:50:56) 
-- CODE:
preco = float(input(""))
pagamento = float(input(""))
x = pagamento - preco 
y = preco - pagamento

if (preco>pagamento):
	print("Falta x")
else:
	print("Troco de Y")

	

-- OUTPUT:
Falta x
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:51:46) 
-- CODE:
preco = float(input(""))
pagamento = float(input("")) 


if (preco>pagamento):
	x = pagamento - preco 
	print("Falta x")
else:
	y = preco - pagamento
	print("Troco de y")

	

-- OUTPUT:
Falta x
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:52:14) 
-- CODE:
preco = float(input(""))
pagamento = float(input("")) 


if (preco>pagamento):
	x = pagamento - preco 
	print("Falta" x)
else:
	y = preco - pagamento
	print("Troco de" y)

	

-- ERROR:
File "XXXX", line 7
    print("Falta" x)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:52:27) 
-- CODE:
preco = float(input(""))
pagamento = float(input("")) 


if (preco>pagamento):
	x = pagamento - preco 
	print("Falta" + x)
else:
	y = preco - pagamento
	print("Troco de" +  y)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print("Falta" + x)
TypeError: must be str, not float
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:52:51) 
-- CODE:
preco = float(input(""))
pagamento = float(input("")) 


if (preco>pagamento):
	x = pagamento - preco 
	print(x)
else:
	y = preco - pagamento
	print(y)

	

-- OUTPUT:
-26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:53:23) 
-- CODE:
preco = float(input(""))
pagamento = float(input("")) 


if (preco>pagamento):
	x = (pagamento - preco)
	print(x)
else:
	y = (preco - pagamento)
	print(y)

	

-- OUTPUT:
-26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:54:27) 
-- CODE:
preco = float(input(""))
pagamento = float(input("")) 


if (preco>pagamento):
	x = (pagamento - preco)
	print("Falta" x)
else:
	y = (preco - pagamento)
	print("Troco de" y)

	

-- ERROR:
File "XXXX", line 7
    print("Falta" x)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:54:54) 
-- CODE:
preco = float(input(""))
pagamento = float(input("")) 


if (preco>pagamento):
	X = (pagamento - preco)
	print("Falta" X)
else:
	Y = (preco - pagamento)
	print("Troco de" Y)

	

-- ERROR:
File "XXXX", line 7
    print("Falta" X)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:55:07) 
-- CODE:
preco = float(input(""))
pagamento = float(input("")) 


if (preco>pagamento):
	x = (pagamento - preco)
	print("Falta", X)
else:
	y = (preco - pagamento)
	print("Troco de", Y)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print("Falta", X)
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:55:20) 
-- CODE:
preco = float(input(""))
pagamento = float(input("")) 


if (preco>pagamento):
	x = (pagamento - preco)
	print("Falta", X)
else:
	y = (preco - pagamento)
	print("Troco de", y)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print("Falta", X)
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:56:24) 
-- CODE:
preco = float(input(""))
pagamento = float(input("")) 


if (preco>pagamento):
	x = (preco - pagamento)
	print("Falta", X)
else:
	y = (pagamento - preco)
	print("Troco de", y)

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print("Falta", X)
NameError: name 'X' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:56:34) 
-- CODE:
preco = float(input(""))
pagamento = float(input("")) 


if (preco>pagamento):
	x = (preco - pagamento)
	print("Falta", X)
else:
	y = (pagamento - preco)
	print("Troco de", y)

	

-- EXECUTION TIME:
0.132867
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 7, in <module>
    print("Falta", X)
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:56:36) 
-- CODE:
preco = float(input(""))
pagamento = float(input("")) 


if (preco>pagamento):
	x = (preco - pagamento)
	print("Falta", X)
else:
	y = (pagamento - preco)
	print("Troco de", y)

	

-- EXECUTION TIME:
0.205407
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2447/main.py", line 7, in <module>
    print("Falta", X)
NameError: name 'X' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:56:40) 
-- CODE:
preco = float(input(""))
pagamento = float(input("")) 


if (preco>pagamento):
	x = (preco - pagamento)
	print("Falta", x)
else:
	y = (pagamento - preco)
	print("Troco de", y)

	

-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:56:51) 
-- CODE:
preco = float(input(""))
pagamento = float(input("")) 


if (preco>pagamento):
	x = (preco - pagamento)
	print("Falta", x)
else:
	y = (pagamento - preco)
	print("Troco de", y)

	

-- EXECUTION TIME:
0.165254
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
